results start over

--- a/thesis/appendices/experimentsResultsAppendix.tex
+++ b/thesis/appendices/experimentsResultsAppendix.tex
@@ -8,50 +8,15 @@
 \begin{sidewaystable}
     %\centering
     \hspace*{-0.5cm}
-    \begin{tabular}{|l|l|l|l|l|l||c|c|c|c|c|c|}
+    \begin{tabular}{|l|l|l|l|l|l||c|c|c|c|c|c|c|c|c|c|}
     \hline
-    ~ & $s$ & $i$ & $E$ & $p_{b}$ & $BR$ & $b_{(ATT)}$ & $avg_{(ATT)}$ & $w_{(ATT)}$ & $b_{(TF)}$ & $avg_{(TF)}$ & $w_{(TF)}$ \\
+    ~ & $s$ & $i$ & $E$ & $p_{b}$ & $BR$ & $b_{(ATT)}$ & $a_{(ATT)}$ & $w_{(ATT)}$ & $\sigma_{(ATT)}$ & $CI_{(ATT)}$ & $b_{(TF)}$ & $a_{(TF)}$ & $w_{(TF)}$ & $\sigma_{(TF)}$ & $CI_{(TF)}$\\
     \hline
-    1 & 50 & 50 & 10\% & \textbf{0.0} & 10\% & 10.5 & 11.22 $\pm$ 0.022 $\sigma$=0.036 & 11.7 & -277.52 & -265.780 $\pm$ 45.652 $\sigma$=73.655 & -250.63 \\
-    ~ & 50 & 50 & 10\% & \textbf{0.1} & 10\% & 10.5 & 11.18 $\pm$ 0.053 $\sigma$=0.086 & 11.7 & -280.65 & -272.499 $\pm$ 16.744 $\sigma$=27.015 & -264.30 \\
-    ~ & 50 & 50 & 10\% & \textbf{0.3} & 10\% & 11.0 & 11.28 $\pm$ 0.021 $\sigma$=0.033 & 11.7 & -278.29 & -271.310 $\pm$ 10.017 $\sigma$=16.161 & -265.25 \\
-    ~ & 50 & 50 & 10\% & \textbf{0.5} & 10\% & 10.9 & 11.41 $\pm$ 0.033 $\sigma$=0.053 & 11.7 & -273.39 & -267.431 $\pm$ 11.972 $\sigma$=19.316 & -259.79\\
-    ~ & 50 & 50 & 10\% & \textbf{0.7} & 10\% & 10.8 & 11.33 $\pm$ 0.048 $\sigma$=0.078 & 11.9 & -280.28 & -266.936 $\pm$ 39.679 $\sigma$=64.019 & -251.02\\
-    ~ & 50 & 50 & 10\% & \textbf{0.9} & 10\% & 10.8 & 11.09 $\pm$ 0.017 $\sigma$=0.027 & 11.4 & -277.48 & -271.79 $\pm$ 15.461 $\sigma$=24.944 & -259.402 \\
-    \hline
-    2 & 50 & 50 & \textbf{1\%} & 0.5 & 10\% & 11.1 & 11.4 & 11.7 & -277.78 & -268.62 & -260.23 \\
-    ~ & 50 & 50 & \textbf{10\%} & 0.5 & 10\% & 10.9 & 11.4 & 11.7 & -276.64 & -269.86 & -260.24 \\
-    ~ & 50 & 50 & \textbf{25\%} & 0.5 & 10\% &  \textbf{10.8} & \textbf{11.3} & \textbf{11.6} & \textbf{-274.76} & \textbf{-270.52} & \textbf{-265.57} \\
-    ~ & 50 & 50 & \textbf{50\%} & 0.5 & 10\% &  11.2 & 11.4 & 11.6 & -277.01 & -268.39 & -256.84 \\
-    ~ & 50 & 50 & \textbf{90\%} & 0.5 & 10\% & 10.7 & 11.3 & 11.7 & -278.16 & -268.93 & -260.16 \\
-    ~ & 50 & 50 & \textbf{75\%} & 0.5 & 10\% & 10.8 & 11.273 $\pm$ 0.057 $\sigma$=0.093 & -274.82 & -269.65 & -269.653 $\pm$ 6.157 $\sigma$=9.935 & -264.32 \\
-    ~ & 50 & 50 & \textbf{99\%} & 0.5 & 10\% & 11.1 & 11.4 & 12.2 & -277.68 & -269.10 & -253 \\
-    \hline
-    3 & 50 & 50 & 10\% & 0.5 & \textbf{1\%} & 10.9 & 11.3 & 11.7 & -276.58 & -267.93 & -258.56 \\
-    ~ & 50 & 50 & 10\% & 0.5 & \textbf{10\%} & 11.1 & 11.4 & 11.5 & -273.50 & -267.03 & -258.85 \\
-    ~ & 50 & 50 & 10\% & 0.5 & \textbf{25\%} & 11.1 & 11.4 & 11.6 & -276.52 & -269.01 & -264.05 \\
-    ~ & 50 & 50 & 10\% & 0.5 & \textbf{50\%} & 11.1 & 11.4 & 11.6 & -276.45 & -269.85 & -263.19 \\
-    ~ & 50 & 50 & 10\% & 0.5 & \textbf{75\%} & 10.7 & 11.260 $\pm$ 0.049 $\sigma$=0.079 & 11.8 & -275.99 & -271.031 $\pm$ 10.527 $\sigma$=16.985 & -262.35 \\
-    ~ & 50 & 50 & 10\% & 0.5 & \textbf{90\%} & 10.9 & 11.3 & 11.8 & -276.49 & -269.80 & -261.10 \\
-    ~ & 50 & 50 & 10\% & 0.5 & \textbf{99\%} & 11.1 & 11.293 $\pm$ 0.024 $\sigma$=0.039 & 11.7 & -277.29 & -270.120 $\pm$ 11.689 $\sigma$=18.859 & -263.73 \\
-    \hline
-    4 & 50 & \textbf{1} & 10\% & 0.5 & 10\% &11.2 & 11.9 & 12.8 & -266.57 & -212.63 & -156.75 \\
-    ~ & 50 & \textbf{10} & 10\% & 0.5 & 10\% & 10.9 & 11.6 & 12.3 & -273.24 & -251.40 & -226.23 \\
-    ~ & 50 & \textbf{50} & 10\% & 0.5 & 10\% &  11.1 & 11.4 & 11. & -269.13 & -265.38 & -262.25 \\
-    ~ & 50 & \textbf{100} & 10\% & 0.5 & 10\% & 10.7 & 11.1 & 11.6 & -282.02 & -273.85 & -267.44 \\
-    ~ & 50 & \textbf{125} & 10\% & 0.5 & 10\% & 10.8 & 11.2 & 11.6 & -280.48 & -273.03 & -265.25 \\
-    %~ & 50 & ~ & 10\% & 0.1 & 0.5 & 10\% & 10\% & 10\% & ~ & ~ & ~ & ~ & ~ & ~  \\
-    ~ & 50 & \textbf{200} & 10\% & 0.5 & 10\% & 11.0 & 11.2 & 11.4 & -280.15 & -275.64 & -272.12  \\
-    \hline
-    5 & \textbf{10$^*$} & 50 & 10\% & 0.5 & 10\% & - & - & - & - & - & - \\
-    ~ & \textbf{25$^*$} & 50 & 10\% & 0.5 & 10\% & - & - & - & - & - & - \\
-    ~ & \textbf{50} & 50 & 10\% & 0.5 & 10\% &10.9 & 11.3 & 11.7 & -272.82 & -269.54 & -265.51 \\
-    ~ & \textbf{100} & 50 & 10\% & 0.5 & 10\% & 11.0 & 11.3 & 11.7 & -279.14 & -271.87 & -266.79 \\
-    ~ & \textbf{150} & 50 & 10\% & 0.5 & 10\% & 11.1 & 11.3 & 11.6 & -278.54 & -273.36 & -266.08 \\
-    ~ & \textbf{200} & 50 & 10\% & 0.5 & 10\% & 11.0 & 11.3 & 11.7 & -279.25 & -272.78 & -265.13 \\
+    1 & 50 & 50 & 10\% & \textbf{0.0} & 10\% & ~ & ~ & ~ & ~ & ~ ~ & ~ & ~ & ~ & ~ & ~ $\pm$ ~\\
+    ~ & 50 & 50 & 10\% & \textbf{0.0} & 10\% & ~ & ~ & ~ & ~ & ~ ~ & ~ & ~ & ~ & ~ & ~ $\pm$ ~\\
     \hline
     \end{tabular}
-    \caption {Steps with the corresponding results from the parameter settings experiment (part 1)}
+    \caption {Steps with the corresponding results from the parameter settings experiment (sample size: 30)}
     \tiny
     \begin{itemize}[noitemsep]
     %\item[$A^b$:] best $ATT$ value
@@ -75,24 +40,13 @@
     \hline
     ~ & $AF$ & $CA$ & $b_{(ATT)}$ & $a_{(ATT)}$ & $w_{(ATT)}$ & $\sigma_{(ATT)}$ & $CI_{(ATT)}$ & $b_{(TF)}$ & $a_{(TF)}$ & $w_{(TF)}$ & $\sigma_{(TF)}$ & $CI_{(TF)}$\\
     \hline
-    1 & 10\% & \textbf{0\%} & 10.8 & 11.3 & 12.1 & 0.057 & 11.335 $\pm$ 0.016 & -280.95 & -267.42 & -246.46 & 38.403 & -267.420 $\pm$ 10.644\\
-    ~ & 10\% & \textbf{1\%} & 10.9 & 11.4 & 11.9 & 0.056 & 11.409 $\pm$ 0.016 & -280.49 & -268.30 & -253.77 & 31.612 & -268.299 $\pm$ 8.762\\
-    ~ & 10\% & \textbf{5\%} & 10.9 & 11.4 & 11.9 & 0.060 & 11.387 $\pm$ 0.017 & -280.80 & -267.86 & -258.59 & 24.750 & -267.865 $\pm$ 6.860\\
-    ~ & 10\% & \textbf{10\%} & 10.8 & 11.3 & 12.0 & 0.059 & 11.305 $\pm$ 0.016 & -283.30 & -268.43 & -248.18 & 47.765 & -268.428 $\pm$ 13.240 \\
-    ~ & 10\% & \textbf{25\%} & 10.9 & 11.4 & 12.3 & 0.065 & 11.350 $\pm$ 0.018 & -279.25 & -269.06 & -251.19 & 31.626 & -269.063 $\pm$ 8.766 \\
-    ~ & 10\% & \textbf{50\%} & 10.8 & 11.4 & 12.1 & 0.071 & 11.385 $\pm$ 0.020 & -279.96 & -267.75 & -248.43 & 56.324 & -267.749 $\pm$ 15.613\\
-    ~ & 10\% & \textbf{100\%} & ~ & ~ & ~ & ~ & ~ & ~ & ~ & ~ & ~ & ~ \\
+    1 & \textbf{0\%} & 10\% & 10.7 & 11.3 & 12.0 & 0.066 & 11.326 $\pm$ 0.018 & -278.36 & -268.58 & -253.59 & 36.406 & -268.581 $\pm$ 10.091 \\
+    ~ & \textbf{1\%} & 10\% & 10.9 & 11.3 & 12.2 & 0.056 & 11.332 $\pm$ 0.015 & -281.18 & -268.40 & -254.74 & 45.397 & -268.400 $\pm$ 12.583 \\
+    ~ & \textbf{5\%} & 10\% & 10.8 & 11.4 & 12.0 & 0.059 & 11.387 $\pm$ 0.017 & -277.78 & -268.09 & -252.78 & 31.297 & -268.087 $\pm$ 8.675 \\ 
     \hline
-    2 & \textbf{0\%} & 10\% & 10.9 & 11.3 & 12.0 & 0.066 & 11.349 $\pm$ 0.018 & -282.59 & -269.04 & -248.81 & 45.923 & -269.043 $\pm$ 12.729 \\
-    ~ & \textbf{1\%} & 10\% & 10.9 & 11.3 & 12.3 & 0.080 & 11.329 $\pm$ 0.022 & -279.38 & -269.66 & -250.46 & 57.360 & -268.659 $\pm$ 15.899 \\
-    ~ & \textbf{5\%} & 10\% & 10.7 & 11.3 & 11.7 & 0.050 & 11.323 $\pm$ 0.014 & -280.41 & -267.88 & -248.17 & 38.070 & -267.885 $\pm$ 10.553 \\
-    ~ & \textbf{10\%} & 10\% & 10.8 & 11.3 & 12.6 & 0.082 & 11.348 $\pm$ 0.023 & -282.66 & -268.66 & -246.45 & 48.454 & -268.659 $\pm$ 13.431 \\
-    ~ & \textbf{25\%} & 10\% & 10.7 & 11.4 & 12.4 & 0.077 & 11.416 $\pm$ 0.021 & -280.21 & -266.76 & -247.99 & 52.953 & -266.756 $\pm$ 14.678 \\
-    ~ & \textbf{50\%} & 10\% & 10.8 & 11.3 & 12.0 & 0.068 & 11.349 $\pm$ 0.019 & -279.32 & -268.26 & -243.23 & 37.675 & -268.263 $\pm$ 10.443 \\
-    ~ & \textbf{100\%} & 10\% & 10.8 & 11.3 & 12.0 & 0.059 & 11.337 $\pm$ 0.016 & -278.45 & -267.91 & -252.14 & 41.691 & -267.914 $\pm$ 11.556 \\
-    \hline
+    
     \end{tabular}
-    \caption {Steps with the corresponding results from the CA and AF parameter settings experiment}
+    \caption {Steps with the corresponding results from the CA and AF parameter settings experiment (Sample size: 50)}
     \tiny
     \begin{itemize}[noitemsep]
     \item[$b_{(ATT)}$:] best $ATT$ value
