--- a/thesis/Report.tex
+++ b/thesis/Report.tex
@@ -149,6 +149,7 @@
 \input{chapters/model/createRouteSet}
 \input{chapters/model/routeSetEvaluation}
 \input{chapters/model/evaporation}
+\input{chapters/model/conclusion}
 %\input{chapters/model/algorithm}
 
 \chapter{Experiments and Results}
