--- a/thesis/appendices/experimentsResultsAppendix.tex
+++ b/thesis/appendices/experimentsResultsAppendix.tex
@@ -7,32 +7,58 @@
 %SIDEWAYS
 \begin{sidewaystable}
     %\centering
-    \hspace*{-0.5cm}
+    \hspace*{-0.7cm}
     \begin{tabular}{|l|l|l|l|l|l||c|c|c|c|c|c|c|c|c|c|}
     \hline
-    ~ & $s$ & $i$ & $E$ & $p_{b}$ & $BR$ & $b_{(ATT)}$ & $a_{(ATT)}$ & $w_{(ATT)}$ & $\sigma_{(ATT)}$ & $CI_{(ATT)}$ & $b_{(TF)}$ & $a_{(TF)}$ & $w_{(TF)}$ & $\sigma_{(TF)}$ & $CI_{(TF)}$\\
+    ~ & $s$ & $i$ & $E$ & $p_{b}$ & $BR$ & $b_{(A)}$ & $a_{(A)}$ & $w_{(A)}$ & $\sigma_{(A)}$ & $CI_{(A)}$ & $b_{(TF)}$ & $a_{(TF)}$ & $w_{(TF)}$ & $\sigma_{(TF)}$ & $CI_{(TF)}$\\
     \hline
-    1 & 50 & 50 & 10\% & \textbf{0.0} & 10\% & ~ & ~ & ~ & ~ & ~ ~ & ~ & ~ & ~ & ~ & ~ $\pm$ ~\\
+    $p_{b}$ & 50 & 50 & 10\% & \textbf{0.0} & 10\% & ~ & ~ & ~ & ~ & ~ ~ & ~ & ~ & ~ & ~ & ~ $\pm$ ~\\
     ~ & 50 & 50 & 10\% & \textbf{0.0} & 10\% & ~ & ~ & ~ & ~ & ~ ~ & ~ & ~ & ~ & ~ & ~ $\pm$ ~\\
+    \hline
+    \hline
+    $E$ & 50 & 50 & \textbf{1\%} & 0.1 & 10\% & 10.9 & 11.3 & 11.8 & 0.06 & 11.33 $\pm$ 0.02 & -279.77 & -269.15 & -248.42 & 41.94 & -269.15 $\pm$ 15.01 \\
+    ~ & 50 & 50 & \textbf{10\%} & 0.5 & 10\% & 11.1 & 11.4 & 12.3 & 0.06 & 11.40 $\pm$ 0.02 & -278.29 & -267.94 & -254.21 & 39.08 & -267.94 $\pm$ 13.98 \\
+    ~ & 50 & 50 & \textbf{25\%} & 0.5 & 10\% & 10.7 & 11.3 & 12.1 & 0.07 & 11.31 $\pm$ 0.02 & -279.70 & -269.58 & -250.41 & 45.83 & -269.58 $\pm$ 16.39 \\
+    ~ & 50 & 50 & \textbf{50\%} & 0.5 & 10\% & 10.9 & 11.3 & 11.7 & 0.03 & 11.31 $\pm$ 0.01 & -278.87 & -270.39 & -259.73 & 25.54 & -270.39 $\pm$ 9.14 \\
+    ~ & 50 & 50 & \textbf{75\%} & 0.5 & 10\% & 11.0 & 11.3 & 11.9 & 0.06 & 11.29 $\pm$ 0.02 & -279.83 & -269.79 & -257.92 & 29.82 & -269.79 $\pm$ 10.67 \\
+    ~ & 50 & 50 & \textbf{90\%} & 0.5 & 10\% & 10.9 & 11.4 & 11.9 & 0.06 & 11.39 $\pm$ 0.02 & -275.34 & -267.24 & -243.93 & 35.39 & -267.24 $\pm$ 12.67 \\
+    ~ & 50 & 50 & \textbf{99\%} & 0.5 & 10\% & 10.9 & 11.4 & 11.9 & 0.05 & 11.41 $\pm$ 0.02 & -282.08 & -266.85 & -247.42 & 72.25 & -266.85 $\pm$ 25.86 \\
+    \hline
+    $BR$ & 50 & 50 & 10\% & 0.5 & \textbf{1\%} & 10.8 & 11.3 & 11.7 & 0.05 & 11.31 $\pm$ 0.02 & -280.03 & -269.67 & -259.27 & 23.23 & -267.67 $\pm$ 8.31 \\
+    ~    & 50 & 50 & 10\% & 0.5 & \textbf{10\%} & 10.7 & 11.4 & 12.0 & 0.06 & 11.36 $\pm$ 0.02 & -278.55 & -268.19 & -255.38 & 29.00 & -268.19 $\pm$ 10.38 \\
+    ~    & 50 & 50 & 10\% & 0.5 & \textbf{25\%} & 10.9 & 11.3 & 11.6 & 0.03 & 11.28 $\pm$ 0.01 & -279.96 & -270.38 & -259.48 & 26.99 & -270.38 $\pm$ 9.66 \\
+    %~    & 50 & 50 & 10\% & 0.5 & \textbf{10\%} &  &  &  &  &  $\pm$  &  &  &  &  &  $\pm$  \\
+    %~    & 50 & 50 & 10\% & 0.5 & \textbf{10\%} &  &  &  &  &  $\pm$  &  &  &  &  &  $\pm$  \\
+    \hline
+    $i$ & 50 & \textbf{1} & 10\% & 0.5 & 10\% & 11.2 & 12.4 & 13.9 & 0.65 & 12.37 $\pm$ 0.23 & -264.86 & -163.04 & -22.93 & 4103.06 & -163,04 $\pm$ 1468.26 \\
+    ~   & 50 &\textbf{10} & 10\% & 0.5 & 10\% & 11.1 & 11.5 & 12.4 & 0.09 & 11.52 $\pm$ 0.03 & -277.46 & -258.94 & -221.18 & 192.79 & -258.94 $\pm$ 68.99 \\
+    ~   & 50 &\textbf{50} & 10\% & 0.5 & 10\% & 10.8 & 11.4 & 12.2 & 0.09 & 11.40 $\pm$ 0.03 & -281.20 & -268.19 & -249.13 &  43.58 & -268.19 $\pm$ 15.59 \\
+    ~   & 50 &\textbf{100} & 10\% & 0.5 & 10\% & 10.7 & 11.2 & 11.7 & 0.04 & 11.18 $\pm$ 0.01 & -279.77 & -274.22 & -263.10 & 14.54 & -274.22 $\pm$ 5.20 \\
     \hline
     \end{tabular}
     \caption {Steps with the corresponding results from the parameter settings experiment (sample size: 30)}
     \tiny
     \begin{itemize}[noitemsep]
+    \item[$A$ :] Average Travel Time ($ATT$)
+    \item[$TF$ :] Total Fitness function($TOTFIT$)
+    \item[$b$ :] Best produced result
+    \item[$a$ :] Average produced result
+    \item[$w$ :] Worst produced result
+    \item[$\sigma$:] Population Standard Deviation 
+    \item[$CI$ :] Confidence Interval with a confidence level of 95\%
     %\item[$A^b$:] best $ATT$ value
     %\item[$A^a$:] average $ATT$ value
     %\item[$A^w$:] worst $ATT$ value
     %\item[$T^b$:] best $TOTFIT$ value (best possible $TOTFIT$ value: -315)
     %\item[$T^a$:] average $TOTFIT$ value
     %\item[$T^w$:] worst $TOTFIT$ value
-    \item[$^*$:] No ants satisfied the initial demands, \emph{\color{blue} TODO: initial demands: }
+    %\item[$^*$:] No ants satisfied the initial demands, \emph{\color{blue} TODO: initial demands: }
     \end{itemize}
     \label{table:pm1}
 \end{sidewaystable}
 
 
 %CA OG FA
-
 \begin{sidewaystable}
     %\centering
     \hspace*{-0.5cm}
@@ -46,7 +72,7 @@
     \hline
     
     \end{tabular}
-    \caption {Steps with the corresponding results from the CA and AF parameter settings experiment (Sample size: 50)}
+    \caption {Steps with the corresponding results from the $CA$ and $AF$ parameter settings experiment (Sample size: 50)}
     \tiny
     \begin{itemize}[noitemsep]
     \item[$b_{(ATT)}$:] best $ATT$ value
