--- a/thesis/Report.tex
+++ b/thesis/Report.tex
@@ -165,6 +165,10 @@
 \chapter{Evaluation and Conclusion}
 \label{evaluationAndConclusion}
 \input{chapters/evaluationAndConclusion/evaluation}
+\input{chapters/evaluationAndConclusion/evaluationCriteraCohen}
+\input{chapters/evaluationAndConclusion/evaluatingResearchProblems}
+\input{chapters/evaluationAndConclusion/evaluatingMethods}
+\input{chapters/evaluationAndConclusion/evaluatingExperiments}
 \input{chapters/evaluationAndConclusion/discussion}
 \input{chapters/evaluationAndConclusion/contributions}
 \input{chapters/evaluationAndConclusion/futurework}
