--- a/thesis/bibl.bib
+++ b/thesis/bibl.bib
@@ -1,3 +1,12 @@
+@unpublished{dobslaw09,
+    author  = "Felix Dobslaw",
+    title   = "A Parameter Tuning Framework for Metaheuristics Based on Design of Experiments and Artificial Neural Networks",
+    school = "Mid Sweden University",
+    year   = "2009",
+    month  = "December",
+    note    = "\url{http://www.diva-portal.org/smash/get/diva2:310723/FULLTEXT01.pdf}",
+}
+
 @article{alnaser12,
     author    = "As’ad Mahmoud Alnaser and Omar AlHeyasat and Ashraf Abdel-Karim Abu-Ein and Hazem (Moh’d Said) Hatamleh and Ahmed A. M. Sharadqeh",
     title     = "Time Comparing between Java and C++ Software",
