--- a/thesis/appendices/experimentsResultsAppendix.tex
+++ b/thesis/appendices/experimentsResultsAppendix.tex
@@ -8,42 +8,42 @@
 \begin{sidewaystable}
     %\centering
     \hspace*{-0.7cm}
-    \begin{tabular}{|l|l|l|l|l|l||c|c|c|c|c|c|c|c|c|c|}
+    \begin{tabular}{|l|l|l|l|l|l||c|c|c|c|c|c|c|}
     \hline
-    ~ & $s$ & $i$ & $E$ & $p_{b}$ & $BR$ & $b_{(A)}$ & $a_{(A)}$ & $w_{(A)}$ & $\sigma_{(A)}$ & $CI_{(A)}$ & $b_{(TF)}$ & $a_{(TF)}$ & $w_{(TF)}$ & $\sigma_{(TF)}$ & $CI_{(TF)}$\\
+    ~ & $s$ & $i$ & $E$ & $p_{b}$ & $BR$ & $CI_{(A)}$ & $b_{(A)}$ & $w_{(A)}$ & $CI_{(TF)}$ & $b_{(TF)}$ & $w_{(TF)}$\\
     \hline
-    $p_{b}$ & 50 & 50 & 10\% & \textbf{0.0} & 10\% & 11.1 & 11.4 & 11.9 & 0.04 & 11.41 $\pm$ 0.02 & -277.39 & -268.52 & -250.82 & 36.98 & 268.52 $\pm$ 13.23 \\
-    ~ & 50 & 50 & 10\% & \textbf{0.1} & 10\% & 10.7 & 11.3 & 12.2 & 0.08 & 11.32 $\pm$ 0.03 & -277.91 & -267.26 & -254.66 & 52.33 & -267.26 $\pm$ 18.73 \\
-    ~ & 50 & 50 & 10\% & \textbf{0.3} & 10\% & 10.7 & 11.3 & 12.1 & 0.07 & 11.35 $\pm$ 0.03 & -277.90 & -268.78 & -253.78 & 29.10 & -268.78 $\pm$ 10.41 \\
+    $p_{b}$ & 50 & 50 & 10\% & \textbf{0.0} & 10\% & 11.41 $\pm$ 0.02 & 11.1 & 11.9 & -268.52 $\pm$ 13.23 & -277.39 & -250.82 \\
+    ~ & 50 & 50 & 10\% & \textbf{0.1} & 10\% & 11.32 $\pm$ 0.03 & 10.7 & 12.2 & -267.26 $\pm$ 18.73 & -277.91 & -254.66 \\
+    ~ & 50 & 50 & 10\% & \textbf{0.3} & 10\% & 11.35 $\pm$ 0.03 & 10.7 & 12.1 & -268.78 $\pm$ 10.41 & -277.90 & -253.78 \\
     %~ & 50 & 50 & 10\% & \textbf{0.3} & 10\% & ~ & ~ & ~ & ~ & ~ $\pm$~ & ~ & ~ & ~ & ~ & ~ $\pm$ ~\\
     %~ & 50 & 50 & 10\% & \textbf{0.3} & 10\% & ~ & ~ & ~ & ~ & ~ $\pm$~ & ~ & ~ & ~ & ~ & ~ $\pm$ ~\\
     \hline
     \hline
-    $E$ & 50 & 50 & \textbf{1\%} & 0.1 & 10\% & 10.9 & 11.3 & 11.8 & 0.06 & 11.33 $\pm$ 0.02 & -279.77 & -269.15 & -248.42 & 41.94 & -269.15 $\pm$ 15.01 \\
-    ~ & 50 & 50 & \textbf{10\%} & 0.5 & 10\% & 11.1 & 11.4 & 12.3 & 0.06 & 11.40 $\pm$ 0.02 & -278.29 & -267.94 & -254.21 & 39.08 & -267.94 $\pm$ 13.98 \\
-    ~ & 50 & 50 & \textbf{25\%} & 0.5 & 10\% & 10.7 & 11.3 & 12.1 & 0.07 & 11.31 $\pm$ 0.02 & -279.70 & -269.58 & -250.41 & 45.83 & -269.58 $\pm$ 16.39 \\
-    ~ & 50 & 50 & \textbf{50\%} & 0.5 & 10\% & 10.9 & 11.3 & 11.7 & 0.03 & 11.31 $\pm$ 0.01 & -278.87 & -270.39 & -259.73 & 25.54 & -270.39 $\pm$ 9.14 \\
-    ~ & 50 & 50 & \textbf{75\%} & 0.5 & 10\% & 11.0 & 11.3 & 11.9 & 0.06 & 11.29 $\pm$ 0.02 & -279.83 & -269.79 & -257.92 & 29.82 & -269.79 $\pm$ 10.67 \\
-    ~ & 50 & 50 & \textbf{90\%} & 0.5 & 10\% & 10.9 & 11.4 & 11.9 & 0.06 & 11.39 $\pm$ 0.02 & -275.34 & -267.24 & -243.93 & 35.39 & -267.24 $\pm$ 12.67 \\
+    $E$ & 50 & 50 & \textbf{1\%} & 0.1 & 10\% & 11.33 $\pm$ 0.02 & 10.9 & 11.8 & -269.15 $\pm$ 15.01 & -279.77 & -248.42   \\
+    ~ & 50 & 50 & \textbf{10\%} & 0.5 & 10\% & 11.40 $\pm$ 0.02  & 11.1& 12.3  &  -267.94 $\pm$ 13.98 & -278.29 & -254.21  \\
+    ~ & 50 & 50 & \textbf{25\%} & 0.5 & 10\% &  11.31 $\pm$ 0.02 & 10.7 & 12.1  & -269.58 $\pm$ 16.39 & -279.70 & -250.41  \\
+    ~ & 50 & 50 & \textbf{50\%} & 0.5 & 10\% & 11.31 $\pm$ 0.01 & 10.9 & 11.7 &  -270.39 $\pm$ 9.14  & -278.87 & -259.73   \\
+    ~ & 50 & 50 & \textbf{75\%} & 0.5 & 10\% & 11.29 $\pm$ 0.02 & 11.0 & 11.9  & -269.79 $\pm$ 10.67 & -279.83 & -257.92  \\
+    ~ & 50 & 50 & \textbf{90\%} & 0.5 & 10\% & 11.39 $\pm$ 0.02 & 10.9 & 11.9 & -267.24 $\pm$ 12.67 & -275.34 & -243.93 \\
     %~ & 50 & 50 & \textbf{99\%} & 0.5 & 10\% & 10.9 & 11.4 & 11.9 & 0.05 & 11.41 $\pm$ 0.02 & -282.08 & -266.85 & -247.42 & 72.25 & -266.85 $\pm$ 25.86 \\
     \hline
-    $BR$ & 50 & 50 & 10\% & 0.5 & \textbf{1\%} & 10.8 & 11.3 & 11.7 & 0.05 & 11.31 $\pm$ 0.02 & -280.03 & -269.67 & -259.27 & 23.23 & -267.67 $\pm$ 8.31 \\
-    ~    & 50 & 50 & 10\% & 0.5 & \textbf{10\%} & 10.7 & 11.4 & 12.0 & 0.06 & 11.36 $\pm$ 0.02 & -278.55 & -268.19 & -255.38 & 29.00 & -268.19 $\pm$ 10.38 \\
-    ~    & 50 & 50 & 10\% & 0.5 & \textbf{25\%} & 10.9 & 11.3 & 11.6 & 0.03 & 11.28 $\pm$ 0.01 & -279.96 & -270.38 & -259.48 & 26.99 & -270.38 $\pm$ 9.66 \\
-    ~    & 50 & 50 & 10\% & 0.5 & \textbf{50\%} & 10.9 & 11.3 & 11.8 & 0.04 & 11.33 $\pm$ 0.02 & -281.95 & -269.54 & -257.93 & 32.28 & -269.54 $\pm$ 11.55 \\
-    ~    & 50 & 50 & 10\% & 0.5 & \textbf{75\%} & 10.8 & 11.4 & 11.9 & 0.06 & 11.38 $\pm$ 0.02 & -276.49 & -268.29 & -253.59 & 24.43 & -268.29 $\pm$ 8.74 \\
-    ~    & 50 & 50 & 10\% & 0.5 & \textbf{90\%} & 10.9 & 11.4 & 12.3 & 0.09 & 11.37 $\pm$ 0.03 & -281.82 & -268.26 & -251.27 & 46.84 & 268.26 $\pm$ 16.76 \\
-    ~    & 50 & 50 & 10\% & 0.5 & \textbf{99\%} & 10.8 & 11.3 & 11.9 & 0.04 &  $\pm$  &  -283.56 & -269.41 & -259.25 & -269.41 & 12.30 $\pm$  \\
+    $BR$ & 50 & 50 & 10\% & 0.5 & \textbf{1\%} & 11.31 $\pm$ 0.02 & 10.8 & 11.7  & -267.67 $\pm$ 8.31 & -280.03 & -259.27  \\
+    ~    & 50 & 50 & 10\% & 0.5 & \textbf{10\%} & 11.36 $\pm$ 0.02 & 10.7 & 12.0  & -268.19 $\pm$ 10.38 & -278.55 & -255.38 \\
+    ~    & 50 & 50 & 10\% & 0.5 & \textbf{25\%} & 11.28 $\pm$ 0.01 & 10.9 & 11.6  & -270.38 $\pm$ 9.66 & -279.96 & -259.48   \\
+    ~    & 50 & 50 & 10\% & 0.5 & \textbf{50\%} & 11.33 $\pm$ 0.02 & 10.9 & 11.8 & -269.54 $\pm$ 11.55 & -281.95 & -257.93  \\
+    ~    & 50 & 50 & 10\% & 0.5 & \textbf{75\%} & 11.38 $\pm$ 0.02 & 10.8 & 11.9  & -268.29 $\pm$ 8.74 & -276.49 & -253.59  \\
+    ~    & 50 & 50 & 10\% & 0.5 & \textbf{90\%} & 11.37 $\pm$ 0.03 & 10.9 & 12.3 & -268.26 $\pm$ 16.76 & -281.82 & -251.27   \\
+    %~    & 50 & 50 & 10\% & 0.5 & \textbf{99\%} &  & 10.8 & 11.9 & 0.04 &  $\pm$  &  -283.56 & -269.41 & -259.25 & -269.41 & 12.30 $\pm$  \\
     \hline
-    $i$ & 50 & \textbf{1} & 10\% & 0.5 & 10\% & 11.2 & 12.4 & 13.9 & 0.65 & 12.37 $\pm$ 0.23 & -264.86 & -163.04 & -22.93 & 4103.06 & -163.04 $\pm$ 1468.26 \\
-    ~   & 50 &\textbf{10} & 10\% & 0.5 & 10\% & 11.1 & 11.5 & 12.4 & 0.09 & 11.52 $\pm$ 0.03 & -277.46 & -258.94 & -221.18 & 192.79 & -258.94 $\pm$ 68.99 \\
-    ~   & 50 &\textbf{50} & 10\% & 0.5 & 10\% & 10.8 & 11.4 & 12.2 & 0.09 & 11.40 $\pm$ 0.03 & -281.20 & -268.19 & -249.13 &  43.58 & -268.19 $\pm$ 15.59 \\
-    ~   & 50 &\textbf{100} & 10\% & 0.5 & 10\% & 10.7 & 11.2 & 11.7 & 0.04 & 11.18 $\pm$ 0.01 & -279.77 & -274.22 & -263.10 & 14.54 & -274.22 $\pm$ 5.20 \\
-    ~   & 50 &\textbf{125} & 10\% & 0.5 & 10\% & 10.9 & 11.2 & 11.7 & 0.04 & 11.23 $\pm$ 0.01 & -280.80 & -272.72 & -265.77 & 16.32 & -272.72 $\pm$ 5.84 \\
+    $i$ & 50 & \textbf{1} & 10\% & 0.5 & 10\% & 12.37 $\pm$ 0.23 & 11.2 & 13.9& -163.04 $\pm$ 1468.26 & -264.86 & -22.93  \\
+    ~   & 50 &\textbf{10} & 10\% & 0.5 & 10\% & 11.52 $\pm$ 0.03 & 11.1 & 12.4 & -258.94 $\pm$ 68.99 & -277.46& -221.18 \\
+    ~   & 50 &\textbf{50} & 10\% & 0.5 & 10\% & 11.40 $\pm$ 0.03 & 10.8 & 12.2 & -268.19 $\pm$ 15.59 & -281.20 & -249.13 \\
+    ~   & 50 &\textbf{100} & 10\% & 0.5 & 10\% & 11.18 $\pm$ 0.01 & 10.7 & 11.7 & -274.22 $\pm$ 5.20  & -279.77 & -263.10 \\
+    ~   & 50 &\textbf{125} & 10\% & 0.5 & 10\% & 11.23 $\pm$ 0.01 & 10.9 & 11.7 & -272.72 $\pm$ 5.84 & -280.80 & -265.77  \\
     \hline
-    $s$ & \textbf{10$^*$} & 50 & 10\% & 0.5 & 10\% & - & - & - & - & - & - & - & - &  & - \\
-    ~ & \textbf{25$^*$} & 50 & 10\% & 0.5 & 10\% & - & - & - & - & - & - & - & - &  & -  \\
-    ~ & \textbf{50} & 50 & 10\% & 0.5 & 10\% & 10.8 & 11.3 & 11.9 & 0.06 & 11.32 $\pm$ 0.02 & -279.70 & -268.13 & -248.58 & 52.47 & -268.13 $\pm$  18.78\\
+    $s$ & \textbf{10$^*$} & 50 & 10\% & 0.5 & 10\% & - & - & - & - & -& -\\
+    ~ & \textbf{25$^*$} & 50 & 10\% & 0.5 & 10\% & - & - & - & - & -& -  \\
+    ~ & \textbf{50} & 50 & 10\% & 0.5 & 10\% & 11.32 $\pm$ 0.02 & 10.8 & 11.9 & -268.13 $\pm$ 18.78 & -279.70 & -248.58\\
     %~ & \textbf{--} & 50 & 10\% & 0.5 & 10\% & - & - & - & - & - $\pm$ - & -& - & - &  & - $\pm$  \\
     \hline
     \end{tabular}
