input data removed to appendices

--- a/thesis/appendices/inputData.tex
+++ b/thesis/appendices/inputData.tex
@@ -1,4 +1,4 @@
-\section{Input Data}
+\chapter{Input Data}
 \label{sec:inputData}
 \emph{\color{blue} Flyttes til appendix?}
 We have, as mentioned, designed and implemented a method to produce a realistic transit network based on the data from Mandl \citep{mandl79}. The data includes a small and dense network of 15 nodes and 21 edges, in addition to the travel times and travel demand for each edge. The total demand is 15,570 trips per day, which is a relatively high demand for a small network. The travel time between the to farthest nodes in the network is 22 minutes along the shortest path. 
