--- a/thesis/appendices/experimentsResultsAppendix.tex
+++ b/thesis/appendices/experimentsResultsAppendix.tex
@@ -19,30 +19,30 @@
     %~ & 50 & 50 & 10\% & \textbf{0.3} & 10\% & ~ & ~ & ~ & ~ & ~ $\pm$~ & ~ & ~ & ~ & ~ & ~ $\pm$ ~\\
     \hline
     \hline
-    $E$ & 50 & 50 & \textbf{1\%} & 0.1 & 10\% & 11.33 $\pm$ 0.02 & 10.9 & 11.8 & -269.15 $\pm$ 15.01 & -279.77 & -248.42   \\
-    ~ & 50 & 50 & \textbf{10\%} & 0.5 & 10\% & 11.40 $\pm$ 0.02  & 11.1& 12.3  &  -267.94 $\pm$ 13.98 & -278.29 & -254.21  \\
-    ~ & 50 & 50 & \textbf{25\%} & 0.5 & 10\% &  11.31 $\pm$ 0.02 & 10.7 & 12.1  & -269.58 $\pm$ 16.39 & -279.70 & -250.41  \\
-    ~ & 50 & 50 & \textbf{50\%} & 0.5 & 10\% & 11.31 $\pm$ 0.01 & 10.9 & 11.7 &  -270.39 $\pm$ 9.14  & -278.87 & -259.73   \\
-    ~ & 50 & 50 & \textbf{75\%} & 0.5 & 10\% & 11.29 $\pm$ 0.02 & 11.0 & 11.9  & -269.79 $\pm$ 10.67 & -279.83 & -257.92  \\
+    $E$ & 50 & 50 & \textbf{1\%} & 0.1 & 10\% & 11.33 $\pm$ 0.02 & 10.9 & 11.8 & -269.15 $\pm$ 15.01 & -279.77 & -248.42 \\
+    ~ & 50 & 50 & \textbf{10\%} & 0.5 & 10\% & 11.40 $\pm$ 0.02  & 11.1& 12.3 & -267.94 $\pm$ 13.98 & -278.29 & -254.21 \\
+    ~ & 50 & 50 & \textbf{25\%} & 0.5 & 10\% &  11.31 $\pm$ 0.02 & 10.7 & 12.1 & -269.58 $\pm$ 16.39 & -279.70 & -250.41 \\
+    ~ & 50 & 50 & \textbf{50\%} & 0.5 & 10\% & 11.31 $\pm$ 0.01 & 10.9 & 11.7 & -270.39 $\pm$ 9.14  & -278.87 & -259.73 \\
+    ~ & 50 & 50 & \textbf{75\%} & 0.5 & 10\% & 11.29 $\pm$ 0.02 & 11.0 & 11.9 & -269.79 $\pm$ 10.67 & -279.83 & -257.92 \\
     ~ & 50 & 50 & \textbf{90\%} & 0.5 & 10\% & 11.39 $\pm$ 0.02 & 10.9 & 11.9 & -267.24 $\pm$ 12.67 & -275.34 & -243.93 \\
     %~ & 50 & 50 & \textbf{99\%} & 0.5 & 10\% & 10.9 & 11.4 & 11.9 & 0.05 & 11.41 $\pm$ 0.02 & -282.08 & -266.85 & -247.42 & 72.25 & -266.85 $\pm$ 25.86 \\
     \hline
-    $BR$ & 50 & 50 & 10\% & 0.5 & \textbf{1\%} & 11.31 $\pm$ 0.02 & 10.8 & 11.7  & -267.67 $\pm$ 8.31 & -280.03 & -259.27  \\
-    ~    & 50 & 50 & 10\% & 0.5 & \textbf{10\%} & 11.36 $\pm$ 0.02 & 10.7 & 12.0  & -268.19 $\pm$ 10.38 & -278.55 & -255.38 \\
-    ~    & 50 & 50 & 10\% & 0.5 & \textbf{25\%} & 11.28 $\pm$ 0.01 & 10.9 & 11.6  & -270.38 $\pm$ 9.66 & -279.96 & -259.48   \\
-    ~    & 50 & 50 & 10\% & 0.5 & \textbf{50\%} & 11.33 $\pm$ 0.02 & 10.9 & 11.8 & -269.54 $\pm$ 11.55 & -281.95 & -257.93  \\
-    ~    & 50 & 50 & 10\% & 0.5 & \textbf{75\%} & 11.38 $\pm$ 0.02 & 10.8 & 11.9  & -268.29 $\pm$ 8.74 & -276.49 & -253.59  \\
-    ~    & 50 & 50 & 10\% & 0.5 & \textbf{90\%} & 11.37 $\pm$ 0.03 & 10.9 & 12.3 & -268.26 $\pm$ 16.76 & -281.82 & -251.27   \\
+    $BR$ & 50 & 50 & 10\% & 0.5 & \textbf{1\%} & 11.31 $\pm$ 0.02 & 10.8 & 11.7 & -267.67 $\pm$ 8.31 & -280.03 & -259.27 \\
+    ~    & 50 & 50 & 10\% & 0.5 & \textbf{10\%} & 11.36 $\pm$ 0.02 & 10.7 & 12.0 & -268.19 $\pm$ 10.38 & -278.55 & -255.38 \\
+    ~    & 50 & 50 & 10\% & 0.5 & \textbf{25\%} & 11.28 $\pm$ 0.01 & 10.9 & 11.6 & -270.38 $\pm$ 9.66 & -279.96 & -259.48 \\
+    ~    & 50 & 50 & 10\% & 0.5 & \textbf{50\%} & 11.33 $\pm$ 0.02 & 10.9 & 11.8 & -269.54 $\pm$ 11.55 & -281.95 & -257.93 \\
+    ~    & 50 & 50 & 10\% & 0.5 & \textbf{75\%} & 11.38 $\pm$ 0.02 & 10.8 & 11.9 & -268.29 $\pm$ 8.74 & -276.49 & -253.59 \\
+    ~    & 50 & 50 & 10\% & 0.5 & \textbf{90\%} & 11.37 $\pm$ 0.03 & 10.9 & 12.3 & -268.26 $\pm$ 16.76 & -281.82 & -251.27 \\
     %~    & 50 & 50 & 10\% & 0.5 & \textbf{99\%} &  & 10.8 & 11.9 & 0.04 &  $\pm$  &  -283.56 & -269.41 & -259.25 & -269.41 & 12.30 $\pm$  \\
     \hline
     $i$ & 50 & \textbf{1} & 10\% & 0.5 & 10\% & 12.37 $\pm$ 0.23 & 11.2 & 13.9& -163.04 $\pm$ 1468.26 & -264.86 & -22.93  \\
     ~   & 50 &\textbf{10} & 10\% & 0.5 & 10\% & 11.52 $\pm$ 0.03 & 11.1 & 12.4 & -258.94 $\pm$ 68.99 & -277.46& -221.18 \\
     ~   & 50 &\textbf{50} & 10\% & 0.5 & 10\% & 11.40 $\pm$ 0.03 & 10.8 & 12.2 & -268.19 $\pm$ 15.59 & -281.20 & -249.13 \\
-    ~   & 50 &\textbf{100} & 10\% & 0.5 & 10\% & 11.18 $\pm$ 0.01 & 10.7 & 11.7 & -274.22 $\pm$ 5.20  & -279.77 & -263.10 \\
+    ~   & 50 &\textbf{100} & 10\% & 0.5 & 10\% & 11.18 $\pm$ 0.01 & 10.7 & 11.7 & -274.22 $\pm$ 5.20 & -279.77 & -263.10 \\
     ~   & 50 &\textbf{125} & 10\% & 0.5 & 10\% & 11.23 $\pm$ 0.01 & 10.9 & 11.7 & -272.72 $\pm$ 5.84 & -280.80 & -265.77  \\
     \hline
-    $s$ & \textbf{10$^*$} & 50 & 10\% & 0.5 & 10\% & - & - & - & - & -& -\\
-    ~ & \textbf{25$^*$} & 50 & 10\% & 0.5 & 10\% & - & - & - & - & -& -  \\
+    $s$ & \textbf{10$^*$} & 50 & 10\% & 0.5 & 10\% & - & - & - & - & -& - \\
+    ~ & \textbf{25$^*$} & 50 & 10\% & 0.5 & 10\% & - & - & - & - & - & -  \\
     ~ & \textbf{50} & 50 & 10\% & 0.5 & 10\% & 11.32 $\pm$ 0.02 & 10.8 & 11.9 & -268.13 $\pm$ 18.78 & -279.70 & -248.58\\
     %~ & \textbf{--} & 50 & 10\% & 0.5 & 10\% & - & - & - & - & - $\pm$ - & -& - & - &  & - $\pm$  \\
     \hline
@@ -76,15 +76,16 @@
     \hline
     ~ & $AF$ & $CA$ & $CI_{(ATT)}$ & $b_{(ATT)}$ & $w_{(ATT)}$ & $CI_{(TF)}$ & $b_{(TF)}$ & $w_{(TF)}$ \\
     \hline
-    $AF$ & \textbf{0\%} & 10\% & 11.326 $\pm$ 0.018 & 10.7 & 12.0 & -268.581 $\pm$ 10.091 & -278.36 & -253.59   \\
-    ~ & \textbf{1\%} & 10\% & 11.332 $\pm$ 0.015 & 10.9 & 12.2 &  -268.400 $\pm$ 12.583  & -281.18 & -254.74   \\
-    ~ & \textbf{5\%} & 10\% & 11.387 $\pm$ 0.017 & 10.8 & 12.0 &  -268.087 $\pm$ 8.675 & -277.78 & -252.78  \\ 
-    ~ & \textbf{10\%} & 10\% & 11.380 $\pm$ 0.020 & 10.7 & 12.2 &   -246.116 $\pm$ 13.095  & -279.13 & -246.12  \\ 
-    ~ & \textbf{50\%} & 10\% & 11.327 $\pm$ 0.012 & 10.8 & 11.8 & -267.70 $\pm$ 15.718 & -281.12& -239.94  \\ 
+    $AF$ & \textbf{0\%} & 10\% & 11.326 $\pm$ 0.018 & 10.7 & 12.0 & -268.581 $\pm$ 10.091 & -278.36 & -253.59 \\
+    ~ & \textbf{1\%} & 10\% & 11.332 $\pm$ 0.015 & 10.9 & 12.2 & -268.400 $\pm$ 12.583  & -281.18 & -254.74 \\
+    ~ & \textbf{5\%} & 10\% & 11.387 $\pm$ 0.017 & 10.8 & 12.0 & -268.087 $\pm$ 8.675 & -277.78 & -252.78 \\ 
+    ~ & \textbf{10\%} & 10\% & 11.380 $\pm$ 0.020 & 10.7 & 12.2 & -246.116 $\pm$ 13.095 & -279.13 & -246.12 \\ 
+    ~ & \textbf{50\%} & 10\% & 11.327 $\pm$ 0.012 & 10.8 & 11.8 & -267.70 $\pm$ 15.718 & -281.12& -239.94 \\ 
     ~ & \textbf{75\%} & 10\% & 11.416 $\pm$ 0.024 & 10.8 & 12.4 & -266.33 $\pm$ 14.057 & -278.48 & -245.41 \\ 
-    ~ & \textbf{100\%} & 10\% & 11.776 $\pm$ 0.053 & 11.0 & 12.8 & -238.18 $\pm$ 116.883 & -279.25 & -179.02\\ 
+    ~ & \textbf{100\%} & 10\% & 11.776 $\pm$ 0.053 & 11.0 & 12.8 & -238.18 $\pm$ 116.883 & -279.25 & -179.02 \\ 
     \hline
-    $CA$ & 10\% &\textbf{0\%} & 11.320 $\pm$ 0.017 & 10.9 & 12.0 &  -268.291 $\pm$ 11.986 & -278.74 & -250.66 \\
+    $CA$ & 10\% &\textbf{0\%} & 11.320 $\pm$ 0.017 & 10.9 & 12.0 & -268.291 $\pm$ 11.986 & -278.74 & -250.66 \\
+    ~ & 10\% &\textbf{1\%} & 11.330 $\pm$ 0.017 & 10.9 & 12.1 & -268.608 $\pm$ 9.236 & -281.53 & -248.49 \\
     %~ & 10\% &\textbf{10\%} & 10.9 & 11.3 & 12.0 & 0.063 & 11.320 $\pm$ 0.017 & -278.74 & -268.29 & -250.66 & 43.241 & -268.291 $\pm$ 11.986 \\
 
     \hline
