--- a/thesis/appendices/experimentsResultsAppendix.tex
+++ b/thesis/appendices/experimentsResultsAppendix.tex
@@ -15,7 +15,7 @@
     $p_{b}$ & 50 & 50 & 10\% & \textbf{0.0} & 10\% & 11.41 $\pm$ 0.02 & 11.1 & 11.9 & -268.52 $\pm$ 13.23 & -277.39 & -250.82 \\
     ~ & 50 & 50 & 10\% & \textbf{0.1} & 10\% & 11.32 $\pm$ 0.03 & 10.7 & 12.2 & -267.26 $\pm$ 18.73 & -277.91 & -254.66 \\
     ~ & 50 & 50 & 10\% & \textbf{0.3} & 10\% & 11.35 $\pm$ 0.03 & 10.7 & 12.1 & -268.78 $\pm$ 10.41 & -277.90 & -253.78 \\
-    %~ & 50 & 50 & 10\% & \textbf{0.3} & 10\% & ~ & ~ & ~ & ~ & ~ $\pm$~ & ~ & ~ & ~ & ~ & ~ $\pm$ ~\\
+    ~ & 50 & 50 & 10\% & \textbf{0.5} & 10\% & 11.30 $\pm$ 0.02 & 10.9 & 11.9 & -269.28 $\pm$ 14.87 & -282.02 & -256.67\\
     %~ & 50 & 50 & 10\% & \textbf{0.3} & 10\% & ~ & ~ & ~ & ~ & ~ $\pm$~ & ~ & ~ & ~ & ~ & ~ $\pm$ ~\\
     \hline
     \hline
@@ -25,7 +25,7 @@
     ~ & 50 & 50 & \textbf{50\%} & 0.5 & 10\% & 11.31 $\pm$ 0.01 & 10.9 & 11.7 & -270.39 $\pm$ 9.14  & -278.87 & -259.73 \\
     ~ & 50 & 50 & \textbf{75\%} & 0.5 & 10\% & 11.29 $\pm$ 0.02 & 11.0 & 11.9 & -269.79 $\pm$ 10.67 & -279.83 & -257.92 \\
     ~ & 50 & 50 & \textbf{90\%} & 0.5 & 10\% & 11.39 $\pm$ 0.02 & 10.9 & 11.9 & -267.24 $\pm$ 12.67 & -275.34 & -243.93 \\
-    %~ & 50 & 50 & \textbf{99\%} & 0.5 & 10\% & 10.9 & 11.4 & 11.9 & 0.05 & 11.41 $\pm$ 0.02 & -282.08 & -266.85 & -247.42 & 72.25 & -266.85 $\pm$ 25.86 \\
+    ~ & 50 & 50 & \textbf{99\%} & 0.5 & 10\% & 11.41 $\pm$ 0.02 & 10.9 & 11.9 & -266.85 $\pm$ 25.86 & -282.08 & -247.42  \\
     \hline
     $BR$ & 50 & 50 & 10\% & 0.5 & \textbf{1\%} & 11.31 $\pm$ 0.02 & 10.8 & 11.7 & -267.67 $\pm$ 8.31 & -280.03 & -259.27 \\
     ~    & 50 & 50 & 10\% & 0.5 & \textbf{10\%} & 11.36 $\pm$ 0.02 & 10.7 & 12.0 & -268.19 $\pm$ 10.38 & -278.55 & -255.38 \\
@@ -33,7 +33,7 @@
     ~    & 50 & 50 & 10\% & 0.5 & \textbf{50\%} & 11.33 $\pm$ 0.02 & 10.9 & 11.8 & -269.54 $\pm$ 11.55 & -281.95 & -257.93 \\
     ~    & 50 & 50 & 10\% & 0.5 & \textbf{75\%} & 11.38 $\pm$ 0.02 & 10.8 & 11.9 & -268.29 $\pm$ 8.74 & -276.49 & -253.59 \\
     ~    & 50 & 50 & 10\% & 0.5 & \textbf{90\%} & 11.37 $\pm$ 0.03 & 10.9 & 12.3 & -268.26 $\pm$ 16.76 & -281.82 & -251.27 \\
-    %~    & 50 & 50 & 10\% & 0.5 & \textbf{99\%} &  & 10.8 & 11.9 & 0.04 &  $\pm$  &  -283.56 & -269.41 & -259.25 & -269.41 & 12.30 $\pm$  \\
+    ~    & 50 & 50 & 10\% & 0.5 & \textbf{99\%} & 11.30 $\pm$ 0.01 & 10.9 & 11.7 & -270.35 $\pm$ 7.52 & -279.70 & -261.02  \\
     \hline
     $i$ & 50 & \textbf{1} & 10\% & 0.5 & 10\% & 12.37 $\pm$ 0.23 & 11.2 & 13.9& -163.04 $\pm$ 1468.26 & -264.86 & -22.93  \\
     ~   & 50 &\textbf{10} & 10\% & 0.5 & 10\% & 11.52 $\pm$ 0.03 & 11.1 & 12.4 & -258.94 $\pm$ 68.99 & -277.46& -221.18 \\
@@ -44,6 +44,7 @@
     $s$ & \textbf{10$^*$} & 50 & 10\% & 0.5 & 10\% & - & - & - & - & -& - \\
     ~ & \textbf{25$^*$} & 50 & 10\% & 0.5 & 10\% & - & - & - & - & - & -  \\
     ~ & \textbf{50} & 50 & 10\% & 0.5 & 10\% & 11.32 $\pm$ 0.02 & 10.8 & 11.9 & -268.13 $\pm$ 18.78 & -279.70 & -248.58\\
+    ~ & \textbf{100} & 50 & 10\% & 0.5 & 10\% & 11.24 $\pm$ 0.02 & 10.7 & 11.8 & -272.37 $\pm$ 6.47 & -278.45 & -261.17\\
     %~ & \textbf{--} & 50 & 10\% & 0.5 & 10\% & - & - & - & - & - $\pm$ - & -& - & - &  & - $\pm$  \\
     \hline
     \end{tabular}
