--- a/thesis/Report.tex
+++ b/thesis/Report.tex
@@ -156,7 +156,6 @@
 \label{experimentsAndResults}
 \input{chapters/experimentsAndResults/experimentsAndResults}
 \input{chapters/experimentsAndResults/developmentEnvironment}
-\input{chapters/experimentsAndResults/inputData}
 \input{chapters/experimentsAndResults/performanceCriteria}
 \input{chapters/experimentsAndResults/experimentalPlan}
 \input{chapters/experimentsAndResults/experimentalSetup}
@@ -185,6 +184,7 @@
 \begin{appendices}
 \input{appendices/protocol/finalprotocol}
 \input{appendices/protocol/searchenginesvol2}
+\input{appendices/inputData}
 \input{appendices/experimentsResultsAppendix}
 \end{appendices}
 
