--- a/thesis/appendices/experimentsResultsAppendix.tex
+++ b/thesis/appendices/experimentsResultsAppendix.tex
@@ -12,39 +12,41 @@
     \hline
     ~ & $s$ & $i$ & $E$ & $p_{b}$ & $BR$ & $CI_{(A)}$ & $b_{(A)}$ & $w_{(A)}$ & $CI_{(TF)}$ & $b_{(TF)}$ & $w_{(TF)}$\\
     \hline
-    $p_{b}$ & 50 & 50 & 10\% & \textbf{0.0} & 10\% & 11.41 $\pm$ 0.02 & 11.1 & 11.9 & -268.52 $\pm$ 13.23 & -277.39 & -250.82 \\
-    ~ & 50 & 50 & 10\% & \textbf{0.1} & 10\% & 11.32 $\pm$ 0.03 & 10.7 & 12.2 & -267.26 $\pm$ 18.73 & -277.91 & -254.66 \\
-    ~ & 50 & 50 & 10\% & \textbf{0.3} & 10\% & 11.35 $\pm$ 0.03 & 10.7 & 12.1 & -268.78 $\pm$ 10.41 & -277.90 & -253.78 \\
-    ~ & 50 & 50 & 10\% & \textbf{0.5} & 10\% & 11.30 $\pm$ 0.02 & 10.9 & 11.9 & -269.28 $\pm$ 14.87 & -282.02 & -256.67\\
-    %~ & 50 & 50 & 10\% & \textbf{0.3} & 10\% & ~ & ~ & ~ & ~ & ~ $\pm$~ & ~ & ~ & ~ & ~ & ~ $\pm$ ~\\
+    $p_{b}$ & 50 & 50 & 10\% & \textbf{0.0} & 10\% & 11.407 $\pm$ 0.016 & 11.1 & 11.9 & -268.520 $\pm$ 13.233 & -277.39 & -250.82 \\
+    ~ & 50 & 50 & 10\% & \textbf{0.1} & 10\% & 11.323 $\pm$ 0.029 & 10.7 & 12.2 & -267.255 $\pm$ 18.728 & -277.91 & -254.66 \\
+    ~ & 50 & 50 & 10\% & \textbf{0.3} & 10\% & 11.347 $\pm$ 0.026 & 10.7 & 12.1 & -268.784 $\pm$ 10.413 & -277.90 & -253.78 \\
+    ~ & 50 & 50 & 10\% & \textbf{0.5} & 10\% & 11.302 $\pm$ 0.021 & 10.9 & 11.9 & -269.279 $\pm$ 14.871 & -282.02 & -256.67\\
+    ~ & 50 & 50 & 10\% & \textbf{0.7} & 10\% & 11.328 $\pm$ 0.019 & 11.0 & 11.8 & -268.216 $\pm$ 11.049 & -279.13 & -257.16\\
+    ~ & 50 & 50 & 10\% & \textbf{0.9} & 10\% & \textbf{11.314 $\pm$ 0.026} & \textbf{10.6} & \textbf{11.9} & \textbf{-269.631 $\pm$ 6.193} & \textbf{-277.29} & \textbf{-260.53}\\
     \hline
     \hline
-    $E$ & 50 & 50 & \textbf{1\%} & 0.1 & 10\% & 11.33 $\pm$ 0.02 & 10.9 & 11.8 & -269.15 $\pm$ 15.01 & -279.77 & -248.42 \\
-    ~ & 50 & 50 & \textbf{10\%} & 0.5 & 10\% & 11.40 $\pm$ 0.02  & 11.1& 12.3 & -267.94 $\pm$ 13.98 & -278.29 & -254.21 \\
-    ~ & 50 & 50 & \textbf{25\%} & 0.5 & 10\% &  11.31 $\pm$ 0.02 & 10.7 & 12.1 & -269.58 $\pm$ 16.39 & -279.70 & -250.41 \\
-    ~ & 50 & 50 & \textbf{50\%} & 0.5 & 10\% & 11.31 $\pm$ 0.01 & 10.9 & 11.7 & -270.39 $\pm$ 9.14  & -278.87 & -259.73 \\
-    ~ & 50 & 50 & \textbf{75\%} & 0.5 & 10\% & 11.29 $\pm$ 0.02 & 11.0 & 11.9 & -269.79 $\pm$ 10.67 & -279.83 & -257.92 \\
-    ~ & 50 & 50 & \textbf{90\%} & 0.5 & 10\% & 11.39 $\pm$ 0.02 & 10.9 & 11.9 & -267.24 $\pm$ 12.67 & -275.34 & -243.93 \\
-    ~ & 50 & 50 & \textbf{99\%} & 0.5 & 10\% & 11.41 $\pm$ 0.02 & 10.9 & 11.9 & -266.85 $\pm$ 25.86 & -282.08 & -247.42  \\
+    $E$ & 50 & 50 & \textbf{1\%} & 0.1 & 10\% & 11.333 $\pm$ 0.020 & 10.9 & 11.8 & -269.150 $\pm$ 15.007 & -279.77 & -248.42 \\
+    ~ & 50 & 50 & \textbf{10\%} & 0.5 & 10\% & 11.402 $\pm$ 0.023 & 11.1 & 12.3 & -267.942 $\pm$ 13.984 & -278.29 & -254.21 \\
+    ~ & 50 & 50 & \textbf{25\%} & 0.5 & 10\% & 11.312 $\pm$ 0.024 & 10.7 & 12.1 & -269.576 $\pm$ 16.400 & -279.70 & -250.41 \\
+    ~ & 50 & 50 & \textbf{50\%} & 0.5 & 10\% & \textbf{11.307 $\pm$ 0.012} & \textbf{10.9} & \textbf{11.7} & \textbf{-270.387 $\pm$ 9.138}  & \textbf{-278.87} & \textbf{-259.73} \\
+    ~ & 50 & 50 & \textbf{75\%} & 0.5 & 10\% & 11.293 $\pm$ 0.023 & 11.0 & 11.9 & -269.795 $\pm$ 10.671 & -279.83 & -257.92 \\
+    ~ & 50 & 50 & \textbf{90\%} & 0.5 & 10\% & 11.389 $\pm$ 0.022 & 10.9 & 11.9 & -267.243 $\pm$ 12.666 & -275.34 & -243.93 \\
+    ~ & 50 & 50 & \textbf{99\%} & 0.5 & 10\% & 11.413 $\pm$ 0.018 & 10.9 & 11.9 & -266.848 $\pm$ 25.855 & -282.08 & -247.42  \\
     \hline
-    $BR$ & 50 & 50 & 10\% & 0.5 & \textbf{1\%} & 11.31 $\pm$ 0.02 & 10.8 & 11.7 & -267.67 $\pm$ 8.31 & -280.03 & -259.27 \\
-    ~    & 50 & 50 & 10\% & 0.5 & \textbf{10\%} & 11.36 $\pm$ 0.02 & 10.7 & 12.0 & -268.19 $\pm$ 10.38 & -278.55 & -255.38 \\
-    ~    & 50 & 50 & 10\% & 0.5 & \textbf{25\%} & 11.28 $\pm$ 0.01 & 10.9 & 11.6 & -270.38 $\pm$ 9.66 & -279.96 & -259.48 \\
-    ~    & 50 & 50 & 10\% & 0.5 & \textbf{50\%} & 11.33 $\pm$ 0.02 & 10.9 & 11.8 & -269.54 $\pm$ 11.55 & -281.95 & -257.93 \\
-    ~    & 50 & 50 & 10\% & 0.5 & \textbf{75\%} & 11.38 $\pm$ 0.02 & 10.8 & 11.9 & -268.29 $\pm$ 8.74 & -276.49 & -253.59 \\
-    ~    & 50 & 50 & 10\% & 0.5 & \textbf{90\%} & 11.37 $\pm$ 0.03 & 10.9 & 12.3 & -268.26 $\pm$ 16.76 & -281.82 & -251.27 \\
-    ~    & 50 & 50 & 10\% & 0.5 & \textbf{99\%} & 11.30 $\pm$ 0.01 & 10.9 & 11.7 & -270.35 $\pm$ 7.52 & -279.70 & -261.02  \\
+    $BR$ & 50 & 50 & 10\% & 0.5 & \textbf{1\%} & 11.312 $\pm$ 0.018 & 10.8 & 11.7 & -267.670 $\pm$ 8.311 & -280.03 & -259.27 \\
+    ~    & 50 & 50 & 10\% & 0.5 & \textbf{10\%} & 11.357 $\pm$ 0.020 & 10.7 & 12.0 & -268.188 $\pm$ 10.378 & -278.55 & -255.38 \\
+    ~    & 50 & 50 & 10\% & 0.5 & \textbf{25\%} & \textbf{11.276 $\pm$ 0.012} & \textbf{10.} & \textbf{11.6} & \textbf{-270.375 $\pm$ 9.661} & \textbf{-279.96} & \textbf{-259.48} \\
+    ~    & 50 & 50 & 10\% & 0.5 & \textbf{50\%} & 11.328 $\pm$ 0.016 & 10.9 & 11.8 & -269.542 $\pm$ 11.553 & -281.95 & -257.93 \\
+    ~    & 50 & 50 & 10\% & 0.5 & \textbf{75\%} & 11.385 $\pm$ 0.020 & 10.8 & 11.9 & -268.295 $\pm$ 8.743 & -276.49 & -253.59 \\
+    ~    & 50 & 50 & 10\% & 0.5 & \textbf{90\%} & 11.372 $\pm$ 0.032 & 10.9 & 12.3 & -268.262 $\pm$ 16.760 & -281.82 & -251.27 \\
+    ~    & 50 & 50 & 10\% & 0.5 & \textbf{99\%} & 11.303 $\pm$ 0.014 & 10.9 & 11.7 & -270.353 $\pm$ 7.523 & -279.70 & -261.02  \\
     \hline
-    $i$ & 50 & \textbf{1} & 10\% & 0.5 & 10\% & 12.37 $\pm$ 0.23 & 11.2 & 13.9& -163.04 $\pm$ 1468.26 & -264.86 & -22.93  \\
-    ~   & 50 &\textbf{10} & 10\% & 0.5 & 10\% & 11.52 $\pm$ 0.03 & 11.1 & 12.4 & -258.94 $\pm$ 68.99 & -277.46& -221.18 \\
-    ~   & 50 &\textbf{50} & 10\% & 0.5 & 10\% & 11.40 $\pm$ 0.03 & 10.8 & 12.2 & -268.19 $\pm$ 15.59 & -281.20 & -249.13 \\
-    ~   & 50 &\textbf{100} & 10\% & 0.5 & 10\% & 11.18 $\pm$ 0.01 & 10.7 & 11.7 & -274.22 $\pm$ 5.20 & -279.77 & -263.10 \\
-    ~   & 50 &\textbf{125} & 10\% & 0.5 & 10\% & 11.23 $\pm$ 0.01 & 10.9 & 11.7 & -272.72 $\pm$ 5.84 & -280.80 & -265.77  \\
+    $i$ & 50 & \textbf{1} & 10\% & 0.5 & 10\% & 12.373 $\pm$ 0.231 & 11.2 & 13.9& -163.041 $\pm$ 1468.263 & -264.86 & -22.93  \\
+    ~   & 50 &\textbf{10} & 10\% & 0.5 & 10\% & 11.523 $\pm$ 0.033 & 11.1 & 12.4 & -258.946 $\pm$ 68.999 & -277.46& -221.18 \\
+    ~   & 50 &\textbf{50} & 10\% & 0.5 & 10\% & 11.397 $\pm$ 0.031 & 10.8 & 12.2 & -268.196 $\pm$ 15.596 & -281.20 & -249.13 \\
+    ~   & 50 &\textbf{100} & 10\% & 0.5 & 10\% & 11.178 $\pm$ 0.013 & 10.7 & 11.7 & -274.218 $\pm$ 5.202 & -279.77 & -263.10 \\
+    ~   & 50 &\textbf{125} & 10\% & 0.5 & 10\% & 11.226 $\pm$ 0.014 & 10.9 & 11.7 & -272.719 $\pm$ 5.840 & -280.80 & -265.77  \\
     \hline
     $s$ & \textbf{10$^*$} & 50 & 10\% & 0.5 & 10\% & - & - & - & - & -& - \\
     ~ & \textbf{25$^*$} & 50 & 10\% & 0.5 & 10\% & - & - & - & - & - & -  \\
-    ~ & \textbf{50} & 50 & 10\% & 0.5 & 10\% & 11.32 $\pm$ 0.02 & 10.8 & 11.9 & -268.13 $\pm$ 18.78 & -279.70 & -248.58\\
-    ~ & \textbf{100} & 50 & 10\% & 0.5 & 10\% & 11.24 $\pm$ 0.02 & 10.7 & 11.8 & -272.37 $\pm$ 6.47 & -278.45 & -261.17\\
+    ~ & \textbf{50} & 50 & 10\% & 0.5 & 10\% & 11.324 $\pm$ 0.022 & 10.8 & 11.9 & -268.131 $\pm$ 18.78 & -279.70 & -248.58\\
+    ~ & \textbf{100} & 50 & 10\% & 0.5 & 10\% & 11.248 $\pm$ 0.019 & 10.7 & 11.8 & -272.367 $\pm$ 6.47 & -278.45 & -261.17\\
+    ~ & \textbf{150} & 50 & 10\% & 0.5 & 10\% & 11.158 $\pm$ 0.015 & 10.6 & 11.5 & -274.543 $\pm$ 5.01 & -282.53 & -267.74\\
     %~ & \textbf{--} & 50 & 10\% & 0.5 & 10\% & - & - & - & - & - $\pm$ - & -& - & - &  & - $\pm$  \\
     \hline
     \end{tabular}
@@ -63,7 +65,7 @@
     %\item[$T^b$:] best $TOTFIT$ value (best possible $TOTFIT$ value: -315)
     %\item[$T^a$:] average $TOTFIT$ value
     %\item[$T^w$:] worst $TOTFIT$ value
-    \item[$^*$:] No ants satisfied the initial demands, \emph{\color{blue} constraints?}
+    \item[$^*$:] No ants satisfied the initial constraints (Constraints \vref{sec:algoConstraints})
     \end{itemize}
     \label{table:pm1}
 \end{sidewaystable}
@@ -87,8 +89,12 @@
     \hline
     $CA$ & 10\% &\textbf{0\%} & 11.320 $\pm$ 0.017 & 10.9 & 12.0 & -268.291 $\pm$ 11.986 & -278.74 & -250.66 \\
     ~ & 10\% &\textbf{1\%} & 11.330 $\pm$ 0.017 & 10.9 & 12.1 & -268.608 $\pm$ 9.236 & -281.53 & -248.49 \\
-    %~ & 10\% &\textbf{10\%} & 10.9 & 11.3 & 12.0 & 0.063 & 11.320 $\pm$ 0.017 & -278.74 & -268.29 & -250.66 & 43.241 & -268.291 $\pm$ 11.986 \\
-
+    ~ & 10\% &\textbf{5\%} & 11.308 $\pm$ 0.016 & 10.6 & 11.9 & -269.272 $\pm$ 8.704 & -278.99 & -254.14 \\
+    ~ & 10\% &\textbf{10\%} & 11.360 $\pm$ 0.016 & 10.8 & 12.0 & -268.016 $\pm$ 9.306 & -280.22 & -250.82 \\
+    ~ & 10\% &\textbf{25\%} & 11.371 $\pm$ 0.018 & 10.9 & 12.2 & -269.622 $\pm$ 6.754 & -280.73 & -255.94 \\
+    ~ & 10\% &\textbf{50\%} & 11.489 $\pm$ 0.028 & 11.0 & 12.6 & -265.178 $\pm$ 17.180 & -279.38 & -247.85 \\
+    ~ & 10\% &\textbf{75\%$^*$} & - & - & - & - & - & - \\
+    ~ & 10\% &\textbf{100\%$^*$} & - & - & - & - & - & - \\
     \hline
     \end{tabular}
     \caption {Steps with the corresponding results from the $CA$ and $AF$ parameter settings experiment (Sample size: 50)}
@@ -104,7 +110,7 @@
     \item[$CI_{(ATT)}$:] average $ATT$ value and Confidence Interval with a confidence level of 95\% ($ATT$)
     %\item[$\sigma_{(TF)}$:] Population Standard Deviation of $TOTFIT$
     \item[$CI_{(TF)}$:] average $TOTFIT$ value and Confidence Interval with a confidence level of 95\% ($TOTFIT$)
-    %\item[$^*$:] No ants satisfied the initial demands, \emph{\color{blue} TODO: initial demands: }
+    \item[$^*$:] No ants satisfied the initial constraints (Constraints \vref{sec:algoConstraints})
     \end{itemize}
     \label{table:pm2}
 \end{sidewaystable}
