--- a/thesis/appendices/experimentsResultsAppendix.tex
+++ b/thesis/appendices/experimentsResultsAppendix.tex
@@ -39,13 +39,13 @@
     $i$ & 50 & \textbf{1} & 10\% & 0.5 & 10\% & 12.373 $\pm$ 0.231 & 11.2 & 13.9& -163.041 $\pm$ 1468.263 & -264.86 & -22.93  \\
     ~   & 50 &\textbf{10} & 10\% & 0.5 & 10\% & 11.523 $\pm$ 0.033 & 11.1 & 12.4 & -258.946 $\pm$ 68.999 & -277.46& -221.18 \\
     ~   & 50 &\textbf{50} & 10\% & 0.5 & 10\% & 11.397 $\pm$ 0.031 & 10.8 & 12.2 & -268.196 $\pm$ 15.596 & -281.20 & -249.13 \\
-    ~   & 50 &\textbf{100} & 10\% & 0.5 & 10\% & 11.178 $\pm$ 0.013 & 10.7 & 11.7 & -274.218 $\pm$ 5.202 & -279.77 & -263.10 \\
+    ~   & 50 &\textbf{100} & 10\% & 0.5 & 10\% & \textbf{11.178 $\pm$ 0.013} & \textbf{10.7} & \textbf{11.7} & \textbf{-274.218 $\pm$ 5.202} & \textbf{-279.77} & \textbf{-263.10} \\
     ~   & 50 &\textbf{125} & 10\% & 0.5 & 10\% & 11.226 $\pm$ 0.014 & 10.9 & 11.7 & -272.719 $\pm$ 5.840 & -280.80 & -265.77  \\
     \hline
     $s$ & \textbf{10$^*$} & 50 & 10\% & 0.5 & 10\% & - & - & - & - & -& - \\
     ~ & \textbf{25$^*$} & 50 & 10\% & 0.5 & 10\% & - & - & - & - & - & -  \\
     ~ & \textbf{50} & 50 & 10\% & 0.5 & 10\% & 11.324 $\pm$ 0.022 & 10.8 & 11.9 & -268.131 $\pm$ 18.78 & -279.70 & -248.58\\
-    ~ & \textbf{100} & 50 & 10\% & 0.5 & 10\% & 11.248 $\pm$ 0.019 & 10.7 & 11.8 & -272.367 $\pm$ 6.47 & -278.45 & -261.17\\
+    ~ & \textbf{100} & 50 & 10\% & 0.5 & 10\% & \textbf{11.248 $\pm$ 0.019} & \textbf{10.7} & \textbf{11.8} & \textbf{-272.367 $\pm$ 6.47} & \textbf{-278.45} & \textbf{-261.17}\\
     ~ & \textbf{150} & 50 & 10\% & 0.5 & 10\% & 11.158 $\pm$ 0.015 & 10.6 & 11.5 & -274.543 $\pm$ 5.01 & -282.53 & -267.74\\
     %~ & \textbf{--} & 50 & 10\% & 0.5 & 10\% & - & - & - & - & - $\pm$ - & -& - & - &  & - $\pm$  \\
     \hline
@@ -79,7 +79,7 @@
     \hline
     ~ & $AF$ & $CA$ & $CI_{(ATT)}$ & $b_{(ATT)}$ & $w_{(ATT)}$ & $CI_{(TF)}$ & $b_{(TF)}$ & $w_{(TF)}$ \\
     \hline
-    $AF$ & \textbf{0\%} & 10\% & 11.326 $\pm$ 0.018 & 10.7 & 12.0 & -268.581 $\pm$ 10.091 & -278.36 & -253.59 \\
+    $AF$ & \textbf{0\%} & 10\% & \textbf{11.326 $\pm$ 0.018} & \textbf{10.7} & \textbf{12.0} & \textbf{-268.581 $\pm$ 10.091} & \textbf{-278.36} & \textbf{-253.59} \\
     ~ & \textbf{1\%} & 10\% & 11.332 $\pm$ 0.015 & 10.9 & 12.2 & -268.400 $\pm$ 12.583  & -281.18 & -254.74 \\
     ~ & \textbf{5\%} & 10\% & 11.387 $\pm$ 0.017 & 10.8 & 12.0 & -268.087 $\pm$ 8.675 & -277.78 & -252.78 \\ 
     ~ & \textbf{10\%} & 10\% & 11.380 $\pm$ 0.020 & 10.7 & 12.2 & -246.116 $\pm$ 13.095 & -279.13 & -246.12 \\ 
@@ -89,7 +89,7 @@
     \hline
     $CA$ & 10\% &\textbf{0\%} & 11.320 $\pm$ 0.017 & 10.9 & 12.0 & -268.291 $\pm$ 11.986 & -278.74 & -250.66 \\
     ~ & 10\% &\textbf{1\%} & 11.330 $\pm$ 0.017 & 10.9 & 12.1 & -268.608 $\pm$ 9.236 & -281.53 & -248.49 \\
-    ~ & 10\% &\textbf{5\%} & 11.308 $\pm$ 0.016 & 10.6 & 11.9 & -269.272 $\pm$ 8.704 & -278.99 & -254.14 \\
+    ~ & 10\% &\textbf{5\%} & \textbf{11.308 $\pm$ 0.016} & \textbf{10.6} & \textbf{11.9} & \textbf{-269.272 $\pm$ 8.704} & \textbf{-278.99} & \textbf{-254.14} \\
     ~ & 10\% &\textbf{10\%} & 11.360 $\pm$ 0.016 & 10.8 & 12.0 & -268.016 $\pm$ 9.306 & -280.22 & -250.82 \\
     ~ & 10\% &\textbf{25\%} & 11.371 $\pm$ 0.018 & 10.9 & 12.2 & -269.622 $\pm$ 6.754 & -280.73 & -255.94 \\
     ~ & 10\% &\textbf{50\%} & 11.489 $\pm$ 0.028 & 11.0 & 12.6 & -265.178 $\pm$ 17.180 & -279.38 & -247.85 \\
