chapter 3 soon finished

--- a/thesis/appendices/protocol/finalprotocol.tex
+++ b/thesis/appendices/protocol/finalprotocol.tex
@@ -82,6 +82,7 @@ One of the goals for the environment package for transportation in Trondheim, ``
     \item What is the state-of-the-art in solving vehicle routing problems using swarm intelligence methods?
     \item What changes have been done to the classical swarm intelligence-methods to improve them?
     \item Have there been any attempts to combine different swarm intelligence-methods?
+    \item Have graph databases been used in combination with the vehicle routing problem and swarm intelligence?
     \end{enumerate}
 \end{enumerate}
 
