table in appendix

--- a/thesis/appendices/protocol/finalprotocol.tex
+++ b/thesis/appendices/protocol/finalprotocol.tex
@@ -4,26 +4,27 @@
 %TODO: The final protocol with the final search term and justifications.
 %Ref: https://raw.githubusercontent.com/kenborge/slr-scbw/master/sections/protocol.tex
 \noindent
-\begin{table}[h]
-\resizebox{12.5cm}{!} {
+\begin{sidewaystable}[h]
+%\resizebox{12.5cm}{!} {
 
-    \hspace*{-2.25cm}
-    \begin{tabular}[c]{| m{1.25cm} | m{1.5cm} | m{1.8cm} | m{1.5cm} | m{1.5cm} | m{1.5cm} | m{1.3cm} | m{1.5cm} | m{1.5cm} |}
+    %\hspace*{-2.25cm}
+    \begin{tabular}[c]{| m{1.25cm} | m{1.5cm} | m{2.5cm} | m{2.5cm} | m{2.5cm} | m{2cm} | m{1.3cm} | m{1.5cm} | m{1.5cm} |}
+    %\begin{tabular}{|l|l|l|l|l|l|l|l|l|}
     \hline
     & \textbf{Group 1} & \textbf{Group 2} & \textbf{Group 3} & \textbf{Group 4} & \textbf{Group 5} & \textbf{Group 6} & \textbf{Group 7} & \textbf{Group 8} \\ \hline   
-    \textbf{Term1} & Train & Path optimization & Bee colony optimization & Transit & Artificial intelligence & Multi agent & Routing & Neo4j \\ \hline
-    \textbf{Term2} & Plane & \hspace{0pt}Scheduling optimization & Particle swarm optimization & \hspace{0pt}Transportation & AI & & & Graph database \\ \hline
-    \textbf{Term3} & Bus & Route optimization & Swarm intelligence & Traffic & Machine Learning & & & \\ \hline
-    \textbf{Term4} & Delivery & Planning & Ant colony optimization & Vehicle & & & & \\ \hline
+    \textbf{Term1} & Train & \parbox[t]{3in}{Path \par optimization\strut} &\parbox[t]{3in}{Bee colony \par optimization\strut}  & Transit & \parbox[t]{3in}{Artificial \par intelligence\strut}  & Multi agent & Routing & Neo4j \\ \hline
+    \textbf{Term2} & Plane & \parbox[t]{3in}{Scheduling \par optimization\strut} & \parbox[t]{3in}{Particle swarm \par optimization\strut} & \hspace{0pt}Transportation & AI & & & Graph database \\ \hline
+    \textbf{Term3} & Bus & \parbox[t]{3in}{Route \par optimization\strut}& \parbox[t]{3in}{Swarm \par intelligence\strut} & Traffic & Machine Learning & & & \\ \hline
+    \textbf{Term4} & Delivery & Planning & \parbox[t]{3in}{Ant colony \par optimization\strut} & Vehicle & & & & \\ \hline
     \textbf{Term5} & & Multimodal & BCO & & & & & \\ \hline
     \textbf{Term6} & & & PSO & & & & & \\ \hline
     \textbf{Term7} & & & ACO & & & & & \\ \hline
-    \end{tabular}\hspace*{-2.25cm}
+    \end{tabular}%\hspace*{-2.25cm}
     
-    }
+   % }
     \caption{Matrix of search terms}
     \label{table:searchterms}
-\end{table}
+\end{sidewaystable}
 
 \section{Search Terms}
 \label{sec:searchTerms}
