problem stament updated but still not finished

--- a/thesis/appendices/inputData.tex
+++ b/thesis/appendices/inputData.tex
@@ -98,11 +98,11 @@ The data set is downloaded from \citet{mumford13}, and consist of three text fil
 
 \end{table}
 
-\begin{figure}[H]
-\begin{center}
-  \includegraphics[width=4in]{assets/mandlnetwork_crop.png}
-  \end{center}
-  \caption{Illustration of Mandl's transit network as a graph}
-  \label{fig:MandlNetwork} 
-   The transit network including the 15 nodes and 21 edges. The graph is undirected. \emph{\color{blue} TODO: Assumptions that it is undirected} Coordinates are correct based on the MandlCoordinates.txt file from \citep{mumford13}
-\end{figure}
+%\begin{figure}[H]
+%\begin{center}
+ % \includegraphics[width=4in]{assets/mandlnetwork_crop.png}
+  %\end{center}
+  %\caption{Illustration of Mandl's transit network as a graph}
+  %\label{fig:MandlNetwork} 
+   %The transit network including the 15 nodes and 21 edges. The graph is undirected. \emph{\color{blue} TODO: Assumptions that it is undirected} Coordinates are correct based on the MandlCoordinates.txt file from \citep{mumford13}
+%\end{figure}
