omstrukturert experiments and results

--- a/thesis/appendices/inputData.tex
+++ b/thesis/appendices/inputData.tex
@@ -1,7 +1,8 @@
 \chapter{Input Data}
 \label{sec:inputData}
 
-A method is, as mentioned, designed and implemented to produce a realistic transit network based on the data from Mandl \citep{mandl79}. The data includes a small and dense network of 15 nodes and 21 edges, in addition to the travel times and travel demand for each edge. %The travel time between the to farthest nodes in the network is 22 minutes along the shortest path. 
+\section{Mandl's Network}
+A method is, as mentioned, designed and implemented to produce a realistic transit network based on the data from Mandl \citep{mandl79}. The data includes a network of 15 nodes and 21 edges, in addition to the travel times and travel demand for each edge. %The travel time between the to farthest nodes in the network is 22 minutes along the shortest path. 
 
 The data set is downloaded from \citet{mumford13}, and consist of three text files:
 
@@ -31,7 +32,7 @@ The data set is downloaded from \citet{mumford13}, and consist of three text fil
     \end{center}
     \caption {Coordinates for Mandl's transit network}
     \label{table:MandlCoords}
-    This file includes 15 lines, with the (x,y) coordinates of the 15 nodes. These coordinates was not supplied in Mandl's literature, so these are copied from \citet{mumford13} and are approximate for the picture to be drawn.
+    This file includes 16 lines, with a number indicating the amount of nodes, and the (x,y) coordinates for the 15 nodes. These coordinates was not supplied in Mandl's literature, so they are copied from \citet{mumford13} and are approximate for the picture to be drawn.
 \end{table}
 
 \begin{table}[H]
@@ -94,7 +95,7 @@ The data set is downloaded from \citet{mumford13}, and consist of three text fil
     }
  	\caption {Demand for Mandl's transit network}
  	\label{table:MandlDemand}
- 	The demand matrix shows the travel demand between each node pair, which is the average number of passenger trips per day. This matrix is also symmetrical. There is no demand either to or from node 15, but it there is demand to node 9, which is only connected to node 15. For coding reasons, we changed the numbers in the main diagonal (from to left corner to bottom right corner) from all zero to all ’a’s.
+ 	The demand matrix shows the travel demand between each node pair, which is the average number of passenger trips per day. This matrix is also symmetrical. There is no demand either to or from node 15, but it there is demand to node 9, which is only connected to node 15. For coding reasons, is the numbers in the main diagonal (from to left corner to bottom right corner) changed from all zero to all ’a’s.
 
 \end{table}
 
@@ -106,3 +107,7 @@ The data set is downloaded from \citet{mumford13}, and consist of three text fil
   %\label{fig:MandlNetwork} 
    %The transit network including the 15 nodes and 21 edges. The graph is undirected. \emph{\color{blue} TODO: Assumptions that it is undirected} Coordinates are correct based on the MandlCoordinates.txt file from \citep{mumford13}
 %\end{figure}
+
+
+
+
