RQ changed and exp plan begynner å komme seg

--- a/thesis/Report.tex
+++ b/thesis/Report.tex
@@ -120,7 +120,7 @@
 \input{chapters/introduction/researchMethod}
 \input{chapters/introduction/thesisOverview}
 
-\chapter{Background and Motivation}
+\chapter{Background Theory and Motivation}
 \label{backgroundAndMotivation}
 \input{chapters/backgroundTheoryAndMotivation/backgroundTheoryAndMotivation}
 %\input{chapters/backgroundTheoryAndMotivation/backgroundTheory}
