--- a/thesis/Report.tex
+++ b/thesis/Report.tex
@@ -157,7 +157,7 @@
 \input{chapters/experimentsAndResults/experimentsAndResults}
 \input{chapters/experimentsAndResults/experimentalPlan}
 \input{chapters/experimentsAndResults/developmentEnvironment}
-\input{chapters/experimentsAndResults/performanceCriteria}
+%\input{chapters/experimentsAndResults/performanceCriteria}
 \input{chapters/experimentsAndResults/experimentalSetup}
 \input{chapters/experimentsAndResults/parameterSettings_planAndSetup}
 \input{chapters/experimentsAndResults/performanceComparison_planAndSetup}
