--- a/thesis/Report.tex
+++ b/thesis/Report.tex
@@ -7,7 +7,7 @@
 \usepackage[english]{babel}						% Correct English hyphenation
 \usepackage[utf8]{inputenc}						% Allow for non-English letters
 \usepackage{graphicx}							% To include graphics
-\usepackage{natbib}								% Correct citations
+\usepackage[square,numbers]{natbib}								% Correct citations
 %\usepackage{fancyheadings}						% Nice header and footer
 \usepackage[linktocpage,colorlinks]{hyperref}			% PDF hyperlink
 %\usepackage{geometry} 							% Better geometry
@@ -25,7 +25,7 @@
 \usepackage{enumitem}
 \usepackage{varioref}
 \usepackage{tabto}
-\usepackage{enumitem} % For abbrecations
+\usepackage{enumitem} % For abbrevations
 \newlist{abbrv}{itemize}{1}
 \setlist[abbrv,1]{label=,labelwidth=1in,align=parleft,itemsep=0.1\baselineskip,leftmargin=!}
 \usepackage[figuresright]{rotating} %For rotating tables
